# rencom-sdk-python

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  release.yml  sync-api.yml  test.yml
docs/: index.md  mkdocs.yml
examples/: auth_flow.py  pagination.py  ucp_search.py  x402_search.py
rencom/: __init__.py  _http.py  auth.py  client.py  exceptions.py  py.typed  x402.py
rencom/_generated/: README.md  __init__.py  models.py
rencom/ucp/: __init__.py  analytics.py  merchants.py  products.py
scripts/: generate.py  publish.sh
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: __init__.py  test_x402_live.py
tests/unit/: __init__.py  test_exceptions.py  test_http.py  test_ucp.py  test_x402.py  test_x402_client.py
