[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rencom"
version = "0.1.4"
description = "Official Python SDK for the Rencom API - unified search for x402 resources and UCP merchants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rencom", email = "developers@rencom.ai"},
]
keywords = ["rencom", "x402", "ucp", "api", "sdk", "search", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "email-validator>=2.3.0",
    "httpx[http2]>=0.27.0",
    "pydantic>=2.0.0",
    "ruff>=0.14.14",
    "typing-extensions>=4.5.0; python_version<'3.11'",
]

[project.optional-dependencies]
# Optional CLI tools
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

# x402 payment integration
x402 = [
    "x402[evm]>=2.0.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",        # Mock httpx
    "vcrpy>=6.0.0",         # Record HTTP interactions
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=4.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# All optional dependencies
all = ["rencom[cli,x402,dev,docs]"]

[project.urls]
Homepage = "https://github.com/rencom-ai/rencom-sdk-python"
Documentation = "https://rencom-sdk-python.readthedocs.io"
Repository = "https://github.com/rencom-ai/rencom-sdk-python"
Issues = "https://github.com/rencom-ai/rencom-sdk-python/issues"
Changelog = "https://github.com/rencom-ai/rencom-sdk-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/rencom",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["rencom"]

# Ruff configuration (linting and formatting)
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"_generated/**" = ["ALL"]  # Don't lint generated code

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "rencom._generated.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=rencom",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require API access)",
    "slow: Slow tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["rencom"]
omit = [
    "rencom/_generated/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.53.0",
]
